# minidsp-rs

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-CI  README-API.md  README.md  build.rs  config.example.toml  default.nix  flake.nix  ios-logs.md  module.nix  package.nix  rustfmt.nightly.toml  todos.md  v2-design.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  push-test.yml  release-build.yml
book/src/: SUMMARY.md  devices.md  getting-started.md  outputs.txt
book/src/cli/: basic.md  config.md  dirac.md  gain.md  inputs.md  inputs_gain.md  inputs_mute.md  inputs_peq.md  inputs_routing.md  mute.md  outputs.md  outputs_compressor.md  outputs_delay.md  outputs_fir.md  outputs_gain.md  outputs_invert.md  outputs_mute.md  outputs_peq.md  outputs_xover.md  source.md
book/src/cli/input/: mute.md  peq.md  routing.md
book/src/cli/master/: dirac.md  index.md  mute.md
book/src/cli/output/: gain.md  index.md
book/src/daemon/: http.md
ci/: README  before_deploy.sh  script.sh
cross_targets/: Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.x86_64-unknown-linux-gnu
daemon/: Cargo.toml
daemon/src/: config.rs  device_manager.rs  logging.rs  main.rs
daemon/src/discovery/: registry.rs  tasks.rs
daemon/src/http/: error.rs  helpers.rs  mod.rs  websocket.rs
daemon/src/http/openapi/: mod.rs  redoc.html  util.rs
daemon/src/tcp/: mod.rs
debian/: minidsp.service  minidsp.udev  postinst
devtools/: Cargo.toml
devtools/src/: main.rs
devtools/src/codegen/: mod.rs  spec.rs  spec_to_tokens.rs
devtools/src/codegen/c8x12v2/: config.xml  mod.rs
devtools/src/codegen/ddrc24/: config.xml  mod.rs
devtools/src/codegen/ddrc88bm/: config.xml  mod.rs
devtools/src/codegen/flex/: config.xml  mod.rs
devtools/src/codegen/m10x10hd/: config.xml  mod.rs
devtools/src/codegen/m2x4/: config.xml  mod.rs
devtools/src/codegen/m2x4hd/: config.xml  mod.rs
devtools/src/codegen/m4x10hd/: config.xml  mod.rs
devtools/src/codegen/msharc4x8/: config.xml  mod.rs
devtools/src/codegen/nanodigi2x8/: config.xml  mod.rs
devtools/src/codegen/shd/: config.xml  mod.rs
docs/: book.toml  build.sh  config.example.toml  gen-output.sh
docs/src/: devices.md  getting-started.md  outputs.txt
docs/src/cli/input/: gain.md  index.md  peq.md  routing.md
docs/src/cli/master/: config.md  dirac.md  gain.md  mute.md  source.md
docs/src/cli/output/: compressor.md  delay.md  fir.md  gain.md  invert.md  mute.md  peq.md  xover.md
docs/src/daemon/: http.md  index.md  tcp.md
docs/src/integrations/: beq.md  index.md  roomie_remote.md
docs/static/: openapi.json
minidsp/: Cargo.toml
minidsp/src/: biquad.rs  builder.rs  client.rs  commands.rs  lib.rs  logging.rs  model.rs  server.rs  tcp_server.rs
minidsp/src/device/: m2x4hd.rs  mod.rs
minidsp/src/device/specs/m2x4hd/: mod.rs
minidsp/src/discovery/: client.rs  mod.rs  server.rs
minidsp/src/formats/: mod.rs  rew.rs  wav.rs  xml_config.rs
minidsp/src/test_fixtures/config1/: sync.txt
minidsp/src/test_fixtures/config3/: config.xml
minidsp/src/transport/: frame_codec.rs  hub.rs  mod.rs  multiplexer.rs
minidsp/src/transport/hid/: discover.rs  mod.rs  stream.rs  wrapper.rs
minidsp/src/transport/mock/: mod.rs
minidsp/src/transport/net/: codec.rs  discover.rs  mod.rs
minidsp/src/transport/net/discovery/: mod.rs  server.rs
minidsp/src/transport/ws/: mod.rs
minidsp/src/utils/: combine.rs  decoder.rs  drop_join_handle.rs  err_into.rs  logger.rs  mock_device.rs  mod.rs  recorder.rs  wav.rs
minidsp/test_fixtures/config2/: sync.txt
minidsp/tests/: 2x8.rs  m2x4hd.rs  m2x8.rs  m4x10hd.rs  test_utils.rs
minidsp/tests/test_utils/: mod.rs
minidsp_daemon/: Cargo.toml
minidsp_daemon/src/: logging.rs  main.rs
minidsp_daemon/src/discovery/: registry.rs  tasks.rs
minidsp_daemon/src/http/: mod.rs
minidsp_daemon/src/tcp/: mod.rs
minidsp_devtools/: Cargo.toml
minidsp_devtools/src/: main.rs
minidsp_devtools/src/codegen/: mod.rs  spec.rs  spec_to_tokens.rs
minidsp_devtools/src/codegen/m2x4hd/: mod.rs
minidsp_devtools/src/codegen/m4x10hd/: config.xml
minidsp_protocol/: Cargo.toml
minidsp_protocol/src/: commands.rs  lib.rs  packet.rs
minidsp_protocol/src/device/: m2x4hd.rs  mod.rs  probe.rs
protocol/: Cargo.toml
protocol/src/: commands.rs  dialect.rs  eeprom.rs  fixed_point.rs  lib.rs  packet.rs  source.rs
protocol/src/device/: c8x12v2.rs  ddrc24.rs  ddrc88bm.rs  flex.rs  m10x10hd.rs  m2x4.rs  m2x4hd.rs  m4x10hd.rs  mod.rs  msharc4x8.rs  nanodigi2x8.rs  probe.rs  shd.rs
protocol/src/util/: mod.rs  try_buf.rs
scripts/: Dockerfile.aarch64  Dockerfile.rpi  README.md  build-pi-armv6hf.sh  minidsp-server.service
scripts/docker/: Makefile  create_dockerfile.sh  update_docker_hub_descriptions.sh
scripts/docker/armv7-unknown-linux-gnueabihf/: Dockerfile
scripts/docker/i686-unknown-linux-musl/: Dockerfile
scripts/docker/mips64-unknown-linux-gnuabi64/: Dockerfile
scripts/docker/mipsel-unknown-linux-gnu/: Dockerfile
scripts/docker/x86_64-unknown-linux-gnu/: Dockerfile
scripts/run-bindgen/: Dockerfile  README.md  bindgen.sh  sed_bindings.py  wrapper.h
scripts/run-bindgen/usr/: README
src/: bindings.rs  biquad.rs  client.rs  commands.rs  config.rs  device.rs  lease.rs  lib.rs  main.rs  model.rs  packet.rs  rew.rs  server.rs  source.rs  xml_config.rs
src/device/: m2x4hd.rs  mod.rs  probe.rs
src/device/specs/: mod.rs
src/discovery/: mod.rs  server.rs
src/test_fixtures/: rew-filters.txt
src/test_fixtures/config1/: config-sync.txt  config.xml
src/test_fixtures/config3/: sync.txt
src/transport/: frame_codec.rs  hid.rs  hub.rs  mod.rs  multiplexer.rs
src/transport/hid/: async_wrapper.rs  discover.rs  handle.rs  mod.rs  stream.rs  wrapper.rs
src/transport/net/: codec.rs  discover.rs  mod.rs
src/utils/: combine.rs  decoder.rs  drop_join_handle.rs  err_into.rs  lease.rs  logger.rs  mod.rs  recorder.rs  stream_sink.rs
utils/: firgen.py
v2test/: Cargo.toml
v2test/src/: lib.rs
(+3 files in other folders)
