[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
edition = "2018"
name = "minidsp"
version = "0.0.4"
license = "MIT"
description = "A control interface for some MiniDSP products"
repository = "https://github.com/mrene/minidsp-rs"
keywords = ["minidsp", "audio", "dsp"]

[dependencies]
anyhow = "1.0.38"
async-stream = "0.3.0"
async-trait = "0.1.42"
bytes = "1.0.1"
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
futures = "0.3.8"
futures-sink = "0.3.8"
futures-util = "0.3.8"
hex = "0.4.2"
log = "0.4.13"
thiserror = "1.0.22"
tokio-stream = "0.1.2"
hexplay = "0.2.1"
enum-utils = "0.1.2"
lazy_static = "1.4.0"
atomic_refcell = "0.1.6"
termcolor = "1.1.2"
strong-xml = "0.6.0"
shellwords = "1.1.0"
bimap = "0.6.0"
wav = "0.5.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[dependencies.hidapi]
optional = true
version = "1.2.5"
features = ["linux-static-libusb"]
default_features = false

[dependencies.tokio]
features = ["full"]
version = "1.0.1"

[dependencies.tokio-util]
features = ["full"]
version = "0.6.1"

[features]
default = ["hid"]
hid = ["hidapi"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[package.metadata.deb]
maintainer = "Mathieu Rene <mathieu.rene@gmail.com>"
copyright = "2020, Mathieu Rene <mathieu.rene@gmail.com>"
maintainer-scripts = "debian/"
systemd-units = { enable=false }
depends = "libusb-1.0-0 (>= 2:1.0.22), libc6 (>= 2.17), libudev1 (>= 183)"
section = "utility"
priority = "optional"
extended-description = """\
Provides a way to control a MiniDSP 2x4HD and other compatible variants from the command line\
"""
assets = [
    ["target/release/minidsp", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/minidsp/README", "644"],
    ["debian/minidsp.service","lib/systemd/system/minidsp.service", "644"],
    ["debian/minidsp.udev","lib/udev/rules.d/99-minidsp.rules", "644"]
]
