[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
edition = "2018"
name = "minidsp"
version = "0.0.5"
license = "MIT"
description = "A control interface for some MiniDSP products"
repository = "https://github.com/mrene/minidsp-rs"
keywords = ["minidsp", "audio", "dsp"]
default-run = "minidsp"

[[bin]]
name="decode"
required-features=["debug"]

[[bin]]
name="codegen"
required-features=["codegen"]

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
bytes = "1.0.1"
clap = "3.0.0-beta.2"
env_logger = "0.8.2"
futures = "0.3.12"
futures-sink = "0.3.12"
futures-util = "0.3.12"
hex = "0.4.2"
log = "0.4.13"
thiserror = "1.0.23"
tokio-stream = "0.1.2"
hexplay = "0.2.1"
strum = { version = "0.20", features = ["derive"] }
lazy_static = "1.4.0"
atomic_refcell = "0.1.6"
termcolor = "1.1.2"
strong-xml = "0.6.0"
shellwords = "1.1.0"
bimap = "0.6.0"
wav = "0.5.0"
pin-project = "1.0.4"
tower = { version = "0.4", features=["util"] }
serde = { version = "1.0.123", features=["derive"] }
serde_json = "1.0.61"

# Codegen only
quote = { version = "1.0.8", optional = true }
proc-macro2 = { version = "1.0.24", optional = true }
Inflector = { version = "0.11.4", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"


[dependencies.hidapi]
optional = true
version = "1.2.5"
features = ["linux-static-libusb"]
default_features = false

[dependencies.tokio]
features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]
version = "1.0.2"

[dependencies.tokio-util]
features = ["net", "codec", "io"]
version = "0.6.2"

[features]
default = ["hid"]
hid = ["hidapi"]
debug = []
codegen = [ "quote", "proc-macro2", "Inflector"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[package.metadata.deb]
maintainer = "Mathieu Rene <mathieu.rene@gmail.com>"
copyright = "2020, Mathieu Rene <mathieu.rene@gmail.com>"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
depends = "libusb-1.0-0 (>= 2:1.0.22), libc6 (>= 2.17), libudev1 (>= 183)"
section = "utility"
priority = "optional"
extended-description = """\
Provides a way to control a MiniDSP 2x4HD and other compatible variants from the command line\
"""
assets = [
    ["target/release/minidsp", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/minidsp/README", "644"],
    ["debian/minidsp.service", "lib/systemd/system/minidsp.service", "644"],
    ["debian/minidsp.udev", "lib/udev/rules.d/99-minidsp.rules", "644"]
]
