[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
edition = "2018"
name = "minidsp"
version = "0.0.6"
license = "MIT"
description = "A control interface for some MiniDSP products"
repository = "https://github.com/mrene/minidsp-rs"
keywords = ["minidsp", "audio", "dsp"]
default-run = "minidsp"

[[bin]]
name="decode"
required-features=["debug"]

[[bin]]
name="codegen"
required-features=["codegen"]

[dependencies]
anyhow = "1.0.39"
async-trait = "0.1.42"
atomic_refcell = "0.1.7"
bimap = "0.6.0"
bytes = "1.0.1"
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
futures = "0.3.14"
futures-sink = "0.3.13"
futures-util = "0.3.12"
hex = "0.4.3"
hexplay = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.14"
pin-project = "1.0.5"
serde = { version = "1.0.124", features=["derive"] }
serde_json = "1.0.64"
shellwords = "1.1.0"
strong-xml = "0.6.1"
strum = { version = "0.20", features = ["derive"] }
termcolor = "1.1.2"
thiserror = "1.0.24"
tokio-stream = "0.1.5"
tower = { version = "0.4.6", features=["util"] }
wav = "0.5.0"

# Codegen only
quote = { version = "1.0.9", optional = true }
proc-macro2 = { version = "1.0.24", optional = true }
Inflector = { version = "0.11.4", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"


[dependencies.hidapi]
optional = true
version = "1.2.5"
features = ["linux-static-libusb"]
default_features = false

[dependencies.tokio]
features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]
version = "1.4.0"

[dependencies.tokio-util]
features = ["net", "codec", "io"]
version = "0.6.5"

[features]
default = ["hid"]
hid = ["hidapi"]
debug = []
codegen = [ "quote", "proc-macro2", "Inflector"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[package.metadata.deb]
maintainer = "Mathieu Rene <mathieu.rene@gmail.com>"
copyright = "2020, Mathieu Rene <mathieu.rene@gmail.com>"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
depends = "libusb-1.0-0 (>= 2:1.0.22), libc6 (>= 2.17), libudev1 (>= 183)"
section = "utility"
priority = "optional"
extended-description = """\
Provides a way to control a MiniDSP 2x4HD and other compatible variants from the command line\
"""
assets = [
    ["target/release/minidsp", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/minidsp/README", "644"],
    ["debian/minidsp.service", "lib/systemd/system/minidsp.service", "644"],
    ["debian/minidsp.udev", "lib/udev/rules.d/99-minidsp.rules", "644"]
]
