[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
edition = "2021"
name = "minidsp-devtools"
version = "0.1.9"
license = "Apache-2.0"

[features]
default = ["symbols"]
symbols = ["minidsp/device"]
devices = ["minidsp/devices"]

[dependencies]
anyhow = "1.0.68"
bimap = "0.6.2"
clap = "4.0.32"
env_logger = "0.10.0"
futures = "0.3.25"
futures-sink = "0.3.25"
futures-util = "0.3.25"
minidsp = {path = "../minidsp", version="0.1.4", default-features = false, features = []}
strong-xml = "0.6.3"
termcolor = "1.1.3"

# Codegen
Inflector = "0.11.4"
proc-macro2 = "1.0.49"
quote = "1.0.23"

[dependencies.tokio]
features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]
version = "1.23.0"

[dependencies.tokio-util]
features = ["net", "codec", "io"]
version = "0.7.4"
