[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
edition = "2021"
name = "minidsp-devtools"
version = "0.1.9"
license = "Apache-2.0"

[features]
default = ["symbols"]
symbols = ["minidsp/device"]
devices = ["minidsp/devices"]

[dependencies]
anyhow = "1.0.79"
bimap = "0.6.3"
clap = "4.4.13"
env_logger = "0.10.1"
futures = "0.3.30"
futures-sink = "0.3.30"
futures-util = "0.3.30"
minidsp = {path = "../minidsp", version="0.1.4", default-features = false, features = []}
strong-xml = "0.6.3"
termcolor = "1.4.1"

# Codegen
Inflector = "0.11.4"
proc-macro2 = "1.0.75"
quote = "1.0.35"

[dependencies.tokio]
features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]
version = "1.35.1"

[dependencies.tokio-util]
features = ["net", "codec", "io"]
version = "0.7.10"
