[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
default-run = "minidsp"
description = "A control interface for some MiniDSP products"
edition = "2021"
keywords = ["minidsp", "audio", "dsp"]
license = "Apache-2.0"
name = "minidsp"
repository = "https://github.com/mrene/minidsp-rs"
version = "0.1.6"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
atomic_refcell = "0.1.8"
bimap = "0.6.2"
bytes = "1.1.0"
clap = { version = "3.1.18", features = ["derive", "env"] }
env_logger = "0.9.0"
futures = "0.3.21"
futures-sink = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
hexplay = "0.2.1"
hyper = "0.14.18"
lazy_static = "1.4.0"
log = "0.4.17"
minidsp-protocol = {path = "../protocol", version = "0.1.6", default-features = false, features = ["use_serde", "debug", "devices"]}
pin-project = "1.0.10"
schemars = "0.8.10"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
shellwords = "1.1.0"
strong-xml = "0.6.3"
strum = { version = "0.24.0", features = ["derive"] }
termcolor = "1.1.3"
thiserror = "1.0.31"
tokio-stream = { version = "0.1.8", features = ["sync"] }
tokio-tungstenite = "0.17.1"
tower = { version = "0.4.12", features = ["util", "timeout"] }
url2 = "0.0.6"
urlencoding = "2.1.0"
wav = "1.0.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
hex-literal = "0.3.4"

[dependencies.hidapi]
default_features = false
features = ["linux-static-libusb"]
optional = true
version = "1.4.1"

[dependencies.tokio]
features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]
version = "1.18.2"

[dependencies.tokio-util]
features = ["net", "codec", "io"]
version = "0.7.2"

[target.'cfg(target_family="unix")'.dependencies]
hyperlocal = "0.8.0"

[features]
debug = []
default = ["hid", "devices", "mock"]
device = ["minidsp-protocol/devices", "minidsp-protocol/symbols"]
devices = [
  "minidsp-protocol/devices",
  "minidsp-protocol/symbols",
  "minidsp-protocol/all_devices",
]
hid = ["hidapi"]
mock = []

[package.metadata.deb]
assets = [
  ["target/release/minidsp", "usr/bin/", "755"],
  ["target/release/minidspd", "usr/bin/", "755"],
  ["../docs/config.example.toml", "etc/minidsp/config.toml", "644"],
  ["../README.md", "usr/share/doc/minidsp/README", "644"],
  ["../debian/minidsp.service", "lib/systemd/system/minidsp.service", "644"],
  ["../debian/minidsp.udev", "lib/udev/rules.d/99-minidsp.rules", "644"],
]
copyright = "2021, Mathieu Rene <mathieu.rene@gmail.com>"
depends = "libusb-1.0-0 (>= 2:1.0.21), libc6 (>= 2.17), libudev1 (>= 183)"
extended-description = """\
Provides a way to control a MiniDSP 2x4HD and other compatible variants from the command line\
"""
maintainer = "Mathieu Rene <mathieu.rene@gmail.com>"
maintainer-scripts = "debian/"
priority = "optional"
section = "utility"
systemd-units = {enable = true, start = true }
