[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
default-run = "minidsp"
description = "A control interface for some MiniDSP products"
edition = "2021"
keywords = ["minidsp", "audio", "dsp"]
license = "Apache-2.0"
name = "minidsp"
repository = "https://github.com/mrene/minidsp-rs"
version = "0.1.7"

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
atomic_refcell = "0.1.8"
bimap = "0.6.2"
bytes = "1.2.1"
clap = { version = "4.0.11", features = ["derive", "env"] }
env_logger = "0.9.1"
futures = "0.3.25"
futures-sink = "0.3.24"
futures-util = "0.3.24"
hex = "0.4.3"
hexplay = "0.2.1"
hyper = "0.14.20"
lazy_static = "1.4.0"
log = "0.4.17"
minidsp-protocol = {path = "../protocol", version = "0.1.7", default-features = false, features = ["use_serde", "debug", "devices"]}
pin-project = "1.0.12"
schemars = "0.8.11"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
shellwords = "1.1.0"
strong-xml = "0.6.3"
strum = { version = "0.24.1", features = ["derive"] }
termcolor = "1.1.3"
thiserror = "1.0.37"
tokio-stream = { version = "0.1.10", features = ["sync"] }
tokio-tungstenite = "0.17.2"
tower = { version = "0.4.13", features = ["util", "timeout"] }
url2 = "0.0.6"
urlencoding = "2.1.2"
wav = "1.0.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
hex-literal = "0.3.4"

[dependencies.hidapi]
default_features = false
features = ["linux-static-libusb"]
optional = true
version = "1.4.2"

[dependencies.tokio]
features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]
version = "1.21.2"

[dependencies.tokio-util]
features = ["net", "codec", "io"]
version = "0.7.4"

[target.'cfg(target_family="unix")'.dependencies]
hyperlocal = "0.8.0"

[features]
debug = []
default = ["hid", "devices", "mock"]
device = ["minidsp-protocol/devices", "minidsp-protocol/symbols"]
devices = [
  "minidsp-protocol/devices",
  "minidsp-protocol/symbols",
  "minidsp-protocol/all_devices",
]
hid = ["hidapi"]
mock = []

[package.metadata.deb]
assets = [
  ["target/release/minidsp", "usr/bin/", "755"],
  ["target/release/minidspd", "usr/bin/", "755"],
  ["../docs/config.example.toml", "etc/minidsp/config.toml", "644"],
  ["../README.md", "usr/share/doc/minidsp/README", "644"],
  ["../debian/minidsp.service", "lib/systemd/system/minidsp.service", "644"],
  ["../debian/minidsp.udev", "lib/udev/rules.d/99-minidsp.rules", "644"],
]
copyright = "2021, Mathieu Rene <mathieu.rene@gmail.com>"
depends = "libusb-1.0-0 (>= 2:1.0.21), libc6 (>= 2.17), libudev1 (>= 183)"
extended-description = """\
Provides a way to control a MiniDSP 2x4HD and other compatible variants from the command line\
"""
maintainer = "Mathieu Rene <mathieu.rene@gmail.com>"
maintainer-scripts = "debian/"
priority = "optional"
section = "utility"
systemd-units = {enable = true, start = true }
