[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
default-run = "minidsp"
description = "A control interface for some MiniDSP products"
edition = "2021"
keywords = ["minidsp", "audio", "dsp"]
license = "Apache-2.0"
name = "minidsp"
repository = "https://github.com/mrene/minidsp-rs"
version = "0.1.9"

[dependencies]
anyhow = "1.0.74"
async-trait = "0.1.73"
atomic_refcell = "0.1.10"
bimap = "0.6.3"
bytes = "1.4.0"
clap = { version = "4.3.21", features = ["derive", "env"] }
env_logger = "0.10.0"
futures = "0.3.28"
futures-sink = "0.3.28"
futures-util = "0.3.28"
hex = "0.4.3"
hexplay = "0.3.0"
hyper = "0.14.27"
lazy_static = "1.4.0"
log = "0.4.19"
minidsp-protocol = {path = "../protocol", version = "0.1.9", default-features = false, features = ["use_serde", "debug", "devices"]}
pin-project = "1.1.3"
schemars = "0.8.12"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
shellwords = "1.1.0"
strong-xml = "0.6.3"
strum = { version = "0.25.0", features = ["derive"] }
termcolor = "1.2.0"
thiserror = "1.0.44"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = "0.20.0"
tower = { version = "0.4.13", features = ["util", "timeout"] }
url2 = "0.0.6"
urlencoding = "2.1.3"
wav = "1.0.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
hex-literal = "0.4.1"

[dependencies.hidapi]
default-features = false
features = ["linux-static-libusb"]
optional = true
version = "2.4.1"

[dependencies.tokio]
features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]
version = "1.30.0"

[dependencies.tokio-util]
features = ["net", "codec", "io"]
version = "0.7.8"

[target.'cfg(target_family="unix")'.dependencies]
hyperlocal = "0.8.0"

[features]
debug = []
default = ["hid", "devices", "mock"]
device = ["minidsp-protocol/devices", "minidsp-protocol/symbols"]
devices = [
  "minidsp-protocol/devices",
  "minidsp-protocol/symbols",
  "minidsp-protocol/all_devices",
]
hid = ["hidapi"]
mock = []

[package.metadata.deb]
assets = [
  ["target/release/minidsp", "usr/bin/", "755"],
  ["target/release/minidspd", "usr/bin/", "755"],
  ["../docs/config.example.toml", "etc/minidsp/config.toml", "644"],
  ["../README.md", "usr/share/doc/minidsp/README", "644"],
  ["../debian/minidsp.service", "lib/systemd/system/minidsp.service", "644"],
  ["../debian/minidsp.udev", "lib/udev/rules.d/99-minidsp.rules", "644"],
]
conf-files = ["etc/minidsp/config.toml"]
copyright = "2021, Mathieu Rene <mathieu.rene@gmail.com>"
depends = "libusb-1.0-0 (>= 2:1.0.21), libc6 (>= 2.17), libudev1 (>= 183)"
extended-description = """\
Provides a way to control a MiniDSP 2x4HD and other compatible variants from the command line\
"""
maintainer = "Mathieu Rene <mathieu.rene@gmail.com>"
maintainer-scripts = "debian/"
priority = "optional"
section = "utility"
systemd-units = {enable = true, start = true }
