[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
edition = "2021"
name = "minidsp-protocol"
version = "0.1.9"
license = "Apache-2.0"
description = "A control interface for some MiniDSP products"
repository = "https://github.com/mrene/minidsp-rs"

[dependencies]
anyhow = "1.0.68"
bytes = "1.4.0"
schemars = { version = "0.8.11", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
strum = { version = "0.24.1", features = ["derive"], optional = true }
thiserror = "1.0.38"

[features]
debug = ["std"]
default = ["std", "debug", "symbols", "all_devices"]
all_devices = ["device_2x4hd", "device_msharc4x8", "device_10x10hd", "device_4x10hd", "device_shd", "device_ddrc24", "device_nanodigi2x8", "device_ddrc88bm", "device_c8x12v2", "device_m2x4", "device_flex"]
device_2x4hd = ["devices"]
device_4x10hd = ["devices"]
device_10x10hd = ["devices"]
device_msharc4x8 = ["devices"]
device_shd = ["devices"]
device_ddrc24 = ["devices"]
device_nanodigi2x8 = ["devices"]
device_ddrc88bm = ["devices"]
device_c8x12v2 = ["devices"]
device_m2x4 = ["devices"]
device_flex = ["devices"]
devices = []
std = []
use_serde = ["std", "serde", "schemars", "strum"]
# Provides a name mapping for every symbol in every device spec
symbols = []
